--- a/peerchat/src/main/res/values/colors.xml
+++ b/peerchat/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">@color/blue</color>
+    <color name="colorPrimaryDark">#0D47A1</color>
     <color name="colorAccent">#D81B60</color>
 
     <color name="text_primary">#000000</color>
+    <color name="blue">#2962FF</color>
+    <color name="green">#558B2F</color>
+    <color name="red">#EE3B00</color>
+    <color name="purple">#AA00FF</color>
 </resources>
