--- a/demo-android/src/main/res/menu/bottom_navigation_menu.xml
+++ b/demo-android/src/main/res/menu/bottom_navigation_menu.xml
@@ -7,6 +7,10 @@
         android:title="Peers"
         android:icon="@drawable/ic_device_hub_black_24dp" />
     <item
+        android:id="@+id/bitcoinFragment"
+        android:title="@string/bitcoin"
+        android:icon="@drawable/ic_device_hub_black_24dp" />
+    <item
         android:id="@+id/usersFragment"
         android:title="Chains"
         android:icon="@drawable/ic_insert_link_black_24dp" />
@@ -18,8 +22,8 @@
         android:id="@+id/myChainFragment"
         android:title="My Chain"
         android:icon="@drawable/ic_person_black_24dp" />
-    <item
-        android:id="@+id/debugFragment"
-        android:title="Debug"
-        android:icon="@drawable/ic_bug_report_black_24dp" />
+<!--    <item-->
+<!--        android:id="@+id/debugFragment"-->
+<!--        android:title="Debug"-->
+<!--        android:icon="@drawable/ic_bug_report_black_24dp" />-->
 </menu>
