--- a/demo-android/src/main/res/navigation/nav_graph.xml
+++ b/demo-android/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
     app:startDestination="@id/peersFragment">
 
     <fragment
@@ -47,4 +49,9 @@
         android:id="@+id/latestBlocksFragment"
         android:name="nl.tudelft.ipv8.android.demo.ui.blocks.LatestBlocksFragment"
         android:label="All Blocks" />
+    <fragment
+        android:id="@+id/bitcoinFragment"
+        android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.bitcoinFragment"
+        android:label="fragment_bitcoin"
+        tools:layout="@layout/fragment_bitcoin" />
 </navigation>
