Add app tutorial

--- a/common/src/main/res/layout/activity_drawer.xml
+++ b/common/src/main/res/layout/activity_drawer.xml
@@ -38,6 +38,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/drawer" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
