--- a/common/src/main/res/layout/activity_drawer.xml
+++ b/common/src/main/res/layout/activity_drawer.xml
@@ -37,7 +37,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:menu="@menu/drawer" />
+        android:fitsSystemWindows="true" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
