Add UI from QR-transfer

--- a/trustchain-trader/src/main/res/menu/bottom_navigation_menu_trader.xml
+++ b/trustchain-trader/src/main/res/menu/bottom_navigation_menu_trader.xml
@@ -5,4 +5,9 @@
         android:id="@+id/traderFragment"
         android:title="Trader"
         android:icon="@drawable/ic_person_black_24dp" />
+
+    <item
+        android:id="@+id/transferFragment"
+        android:title="Transfer"
+        android:icon="@drawable/ic_person_black_24dp" />
 </menu>
