Add join shared wallet

--- a/demo-android/src/main/res/layout/fragment_bitcoin.xml
+++ b/demo-android/src/main/res/layout/fragment_bitcoin.xml
@@ -168,7 +168,7 @@
                 android:id="@+id/search_wallet_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Search a Shared Wallet" />
+                android:text="Join a Shared Wallet" />
 
         </LinearLayout>
 
