--- a/demo-android/src/main/res/layout/fragment_join_network.xml
+++ b/demo-android/src/main/res/layout/fragment_join_network.xml
@@ -14,13 +14,16 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Join a shared Wallet" />
-
-        <Button
-            android:id="@+id/button"
+            android:text="Join a shared Wallet"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Join!" />
+            android:text="Click on a SW public key to join!" />
+        <ListView
+            android:id="@+id/list_view"
+            android:layout_width="match_parent"
+            android:layout_height="596dp" />
     </LinearLayout>
 
 </FrameLayout>
