--- a/trustchain-trader/src/main/res/layout/fragment_transfer_receive.xml
+++ b/trustchain-trader/src/main/res/layout/fragment_transfer_receive.xml
@@ -72,8 +72,8 @@
             />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginTop="20dp"
             android:id="@+id/image3rdQR" />
 
