Disable going back after confirmation

--- a/trustchain-trader/src/main/res/navigation/nav_graph_trader.xml
+++ b/trustchain-trader/src/main/res/navigation/nav_graph_trader.xml
@@ -35,7 +35,9 @@
         android:label="TransferConfirmationFragment" >
         <action
             android:id="@+id/action_transferConfirmationFragment_to_transferFragment"
-            app:destination="@id/transferFragment" />
+            app:destination="@id/transferFragment"
+            app:popUpTo="@+id/main_nav_graph"
+            app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
