--- a/trustchain-trader/src/main/res/layout/fragment_transfer_receive.xml
+++ b/trustchain-trader/src/main/res/layout/fragment_transfer_receive.xml
@@ -73,7 +73,7 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/image3rdQR" />
 
         <Button
