--- a/trustchain-trader/src/main/res/menu/bottom_navigation_menu_trader.xml
+++ b/trustchain-trader/src/main/res/menu/bottom_navigation_menu_trader.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/ic_person_black_24dp" />
 
     <item
-        android:id="@+id/transferFragment"
+        android:id="@+id/transferReceiveFragment"
         android:title="Transfer"
         android:icon="@drawable/ic_person_black_24dp" />
 
