--- a/trustchain-trader/src/main/res/layout/fragment_trader.xml
+++ b/trustchain-trader/src/main/res/layout/fragment_trader.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.TraderFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/txtBalance"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Yo" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
