--- a/demo-android/src/main/res/layout/fragment_join_network.xml
+++ b/demo-android/src/main/res/layout/fragment_join_network.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="20px">
 
         <TextView
             android:id="@+id/textView2"
