Cleanup and add mysharedwalletsfragment view

--- a/demo-android/src/main/res/navigation/nav_graph.xml
+++ b/demo-android/src/main/res/navigation/nav_graph.xml
@@ -69,4 +69,9 @@
         android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.CreateSWFragment"
         android:label="fragment_create_sw"
         tools:layout="@layout/fragment_create_sw" />
+    <fragment
+        android:id="@+id/mySharedWalletsFragment"
+        android:name="nl.tudelft.ipv8.android.demo.ui.bitcoin.MySharedWalletsFragment"
+        android:label="fragment_my_shared_wallets"
+        tools:layout="@layout/fragment_my_shared_wallets" />
 </navigation>
